<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微卡掌上签到</string>
    <string name="copyright">Copyright @ WakeCar 2014 v1.1</string>
    <string name="action_settings">切换用户</string>
    <string name="prompt_email">请输入邮箱</string>
    <string name="prompt_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_progress">登录中...</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="sign_in">签到</string>
    <string name="retry_login">重新登录</string>
    <string name="sign_in_progress">签到中...</string>
    <string name="sign_in_failed">签到失败，请再试一次...</string>
    <string name="developing">还想切换用户？老实签到去！</string>

</resources>
